[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/personagens/biscoito/biscoito_sprite.png" type="Texture" id=1]
[ext_resource path="res://scripts/personagens/personagens.gd" type="Script" id=2]
[ext_resource path="res://assets/personagens/biscoito/sombra2.png" type="Texture" id=3]
[ext_resource path="res://assets/personagens/biscoito/sombra1.png" type="Texture" id=4]
[ext_resource path="res://data/dialogs/pt_BR/biscoito/biscoito_normal.tres" type="Resource" id=5]

[sub_resource type="Animation" id=3]
length = 0.48
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_left"
length = 0.48
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_right"
length = 0.48
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 10 ]
}

[sub_resource type="Animation" id=2]
length = 0.48
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[node name="biscoito" type="Node2D"]
script = ExtResource( 2 )
interaction = ExtResource( 5 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
hframes = 12
frame = 9

[node name="sombra1" type="Sprite" parent="sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.196078 )
show_behind_parent = true
position = Vector2( -1, 9 )
texture = ExtResource( 4 )

[node name="sombra2" type="Sprite" parent="sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.196078 )
show_behind_parent = true
position = Vector2( 0, 8 )
texture = ExtResource( 3 )

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/walk_down = SubResource( 3 )
anims/walk_left = SubResource( 4 )
anims/walk_right = SubResource( 5 )
anims/walk_up = SubResource( 2 )

[node name="tween" type="Tween" parent="."]

[connection signal="frame_changed" from="sprite" to="." method="_on_sprite_frame_changed"]
